--- a/index.html
+++ b/index.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8">
-  <title>Dat | AI Student</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio - Giới thiệu bản thân</title>
+
+    <!-- LINK CSS -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>👋 Xin chào, mình là Đạt</h1>
-  <p>Sinh viên AI – EAUT</p>
-  <p>Python | AI | Git | Linux</p>
+
+<header>
+    <nav>
+        <div class="logo">MyPortfolio</div>
+        <ul>
+            <li><a href="#home">Trang chủ</a></li>
+            <li><a href="#about">Giới thiệu</a></li>
+            <li><a href="#projects">Dự án</a></li>
+            <li><a href="#skills">Kỹ năng</a></li>
+            <li><a href="#contact">Liên hệ</a></li>
+        </ul>
+    </nav>
+</header>
+
+<section id="home" class="hero">
+    <div class="particles"></div>
+    <div class="hero-content">
+        <h1>Chào mừng đến Portfolio của tôi</h1>
+        <p>Developer | Designer | Creative Thinker</p>
+        <a href="#projects" class="btn">Xem dự án của tôi</a>
+    </div>
+</section>
+
+<!-- ⚠️ PHẦN BODY CÒN LẠI GIỮ NGUYÊN NHƯ FILE GỐC -->
+
+<footer>
+    <p>&copy; 2024 MyPortfolio. Made with ❤️</p>
+</footer>
+
+<!-- LINK JS -->
+<script src="script.js"></script>
 </body>
 </html>
