--- a/index.html
+++ b/index.html
@@ -4,41 +4,202 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Giới thiệu bản thân</title>
-
-    <!-- LINK CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <div class="logo">MyPortfolio</div>
+            <ul>
+                <li><a href="#home">Trang chủ</a></li>
+                <li><a href="#about">Giới thiệu</a></li>
+                <li><a href="#projects">Dự án</a></li>
+                <li><a href="#skills">Kỹ năng</a></li>
+                <li><a href="#contact">Liên hệ</a></li>
+            </ul>
+        </nav>
+    </header>
 
-<header>
-    <nav>
-        <div class="logo">MyPortfolio</div>
-        <ul>
-            <li><a href="#home">Trang chủ</a></li>
-            <li><a href="#about">Giới thiệu</a></li>
-            <li><a href="#projects">Dự án</a></li>
-            <li><a href="#skills">Kỹ năng</a></li>
-            <li><a href="#contact">Liên hệ</a></li>
-        </ul>
-    </nav>
-</header>
+    <section id="home" class="hero">
+        <div class="particles"></div>
+        <div class="hero-content">
+            <h1>Chào mừng đến Portfolio của tôi</h1>
+            <p>Developer | Designer | Creative Thinker</p>
+            <a href="#projects" class="btn">Xem dự án của tôi</a>
+        </div>
+    </section>
 
-<section id="home" class="hero">
-    <div class="particles"></div>
-    <div class="hero-content">
-        <h1>Chào mừng đến Portfolio của tôi</h1>
-        <p>Developer | Designer | Creative Thinker</p>
-        <a href="#projects" class="btn">Xem dự án của tôi</a>
-    </div>
-</section>
+    <section id="about" class="about">
+        <div class="container">
+            <h2 class="section-title">Giới thiệu bản thân</h2>
+            <div class="about-content">
+                <div class="profile-img">👨‍💻</div>
+                <div class="about-text">
+                    <p>Xin chào! Tôi là một lập trình viên đam mê công nghệ và sáng tạo. Với kinh nghiệm trong phát triển web và ứng dụng, tôi luôn tìm kiếm những thách thức mới để học hỏi và phát triển.</p>
+                    <p>Tôi tin rằng code tốt không chỉ hoạt động mà còn phải dễ đọc, dễ bảo trì và mang lại giá trị thực sự cho người dùng. Mục tiêu của tôi là tạo ra những sản phẩm công nghệ giúp cuộc sống của mọi người trở nên tốt đẹp hơn.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
-<!-- ⚠️ PHẦN BODY CÒN LẠI GIỮ NGUYÊN NHƯ FILE GỐC -->
+    <section id="projects" class="projects">
+        <div class="container">
+            <h2 class="section-title">Dự án cá nhân</h2>
+            <div class="projects-grid">
+                <div class="project-card">
+                    <div class="project-img">🚀</div>
+                    <div class="project-info">
+                        <h3>Website E-Commerce</h3>
+                        <p>Một nền tảng thương mại điện tử hoàn chỉnh với giỏ hàng, thanh toán và quản lý đơn hàng.</p>
+                        <div class="project-tags">
+                            <span class="tag">React</span>
+                            <span class="tag">Node.js</span>
+                            <span class="tag">MongoDB</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="#" class="project-link">Demo</a>
+                            <a href="#" class="project-link">Source</a>
+                        </div>
+                    </div>
+                </div>
 
-<footer>
-    <p>&copy; 2024 MyPortfolio. Made with ❤️</p>
-</footer>
+                <div class="project-card">
+                    <div class="project-img">📱</div>
+                    <div class="project-info">
+                        <h3>App Quản lý công việc</h3>
+                        <p>Ứng dụng giúp quản lý công việc hàng ngày với giao diện thân thiện và nhiều tính năng tiện ích.</p>
+                        <div class="project-tags">
+                            <span class="tag">React Native</span>
+                            <span class="tag">Firebase</span>
+                            <span class="tag">Redux</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="#" class="project-link">Demo</a>
+                            <a href="#" class="project-link">Source</a>
+                        </div>
+                    </div>
+                </div>
 
-<!-- LINK JS -->
-<script src="script.js"></script>
+                <div class="project-card">
+                    <div class="project-img">🎮</div>
+                    <div class="project-info">
+                        <h3>Game 2D Platform</h3>
+                        <p>Game platformer 2D với đồ họa pixel art và gameplay hấp dẫn, được xây dựng bằng JavaScript thuần.</p>
+                        <div class="project-tags">
+                            <span class="tag">JavaScript</span>
+                            <span class="tag">Canvas</span>
+                            <span class="tag">HTML5</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="#" class="project-link">Demo</a>
+                            <a href="#" class="project-link">Source</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-img">🤖</div>
+                    <div class="project-info">
+                        <h3>AI Chatbot</h3>
+                        <p>Chatbot thông minh sử dụng machine learning để trò chuyện và hỗ trợ người dùng.</p>
+                        <div class="project-tags">
+                            <span class="tag">Python</span>
+                            <span class="tag">TensorFlow</span>
+                            <span class="tag">NLP</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="#" class="project-link">Demo</a>
+                            <a href="#" class="project-link">Source</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-img">📊</div>
+                    <div class="project-info">
+                        <h3>Dashboard Analytics</h3>
+                        <p>Bảng điều khiển phân tích dữ liệu với biểu đồ tương tác và báo cáo thời gian thực.</p>
+                        <div class="project-tags">
+                            <span class="tag">Vue.js</span>
+                            <span class="tag">Chart.js</span>
+                            <span class="tag">API</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="#" class="project-link">Demo</a>
+                            <a href="#" class="project-link">Source</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-img">🎨</div>
+                    <div class="project-info">
+                        <h3>Design System</h3>
+                        <p>Thư viện component UI tái sử dụng cho các dự án web với documentation đầy đủ.</p>
+                        <div class="project-tags">
+                            <span class="tag">React</span>
+                            <span class="tag">Storybook</span>
+                            <span class="tag">CSS</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="#" class="project-link">Demo</a>
+                            <a href="#" class="project-link">Source</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="skills" class="skills">
+        <div class="container">
+            <h2 class="section-title">Kỹ năng</h2>
+            <div class="skills-grid">
+                <div class="skill-card">
+                    <div class="skill-icon">💻</div>
+                    <h3>Frontend</h3>
+                    <p>HTML, CSS, JavaScript, React, Vue.js</p>
+                </div>
+                <div class="skill-card">
+                    <div class="skill-icon">⚙️</div>
+                    <h3>Backend</h3>
+                    <p>Node.js, Python, PHP, Express</p>
+                </div>
+                <div class="skill-card">
+                    <div class="skill-icon">🗄️</div>
+                    <h3>Database</h3>
+                    <p>MongoDB, MySQL, PostgreSQL</p>
+                </div>
+                <div class="skill-card">
+                    <div class="skill-icon">🎨</div>
+                    <h3>Design</h3>
+                    <p>Figma, Adobe XD, UI/UX</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact" class="contact">
+        <div class="container">
+            <div class="contact-content">
+                <h2>Liên hệ với tôi</h2>
+                <p>Bạn có dự án thú vị? Hãy cùng làm việc với nhau!</p>
+                <a href="mailto:your.email@example.com" class="btn">Gửi email</a>
+                <div class="social-links">
+                    <a href="#" class="social-link">📘</a>
+                    <a href="#" class="social-link">🐦</a>
+                    <a href="#" class="social-link">💼</a>
+                    <a href="#" class="social-link">💻</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 MyPortfolio. Made with ❤️</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
+
